--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="style.css?rnd=132">
-     <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+     <link rel = "stylesheet" href = "/leaflet.css"/>
      <link href="nouislider.css" rel="Stylesheet" type="text/css">
      <link href="sliders.css" rel="Stylesheet" type="text/css">
 
@@ -20,7 +20,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
     <!-- leaflet-->
-      <script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+      <script src = "/js/leaflet.js"></script>
       <script src="js/jquery-3.1.1.min.js"></script>
       <script src="/js/d3.v3.min.js"></script>
       <script src="/js/nouislider.js"></script>
@@ -105,11 +105,7 @@
             </ul>
            <br>
            <br>
-           <br>
-           <br>
-           <br>
-           <br>
-            <div>
+            <div style="background-color: white;">
              <img src="images/logo-full-no-text.svg" alt="Simply Easy Learning" width="150" height="80">
             </div>
             
