--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             
             <div style="padding-left: 5%; background-color: white; color: black; font-size:0.8em;">Built By
-                <img src="images/logo-full-no-text.svg" alt="Simply Easy Learning" width="75" height="40">
+                <img src="images/GG_Logo.png" alt="Simply Easy Learning" width="125" height="40">
                </div>
 
             <ul class="list-unstyled components">
@@ -86,10 +86,10 @@
                 <li>
                     <a href="#landSurfaceSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Land Surface Temperature</a>
                     <ul class="collapse list-unstyled" id="landSurfaceSubmenu">
-                        <li>
+                        <!-- <li>
                             <a href="#">PPP-sum</a>
                             <div id='3pSumFilter' class='slider'></div>
-                        </li>
+                        </li> -->
                         <li>
                             <a href="#">Land cover</a>
                             <div id='lcFilter' class='slider'></div>
